--- a/React Projects/crwn-clothing/src/pages/checkout/checkout.styles.scss
+++ b/React Projects/crwn-clothing/src/pages/checkout/checkout.styles.scss
@@ -24,6 +24,18 @@
     margin-left: auto;
     font-size: 36px;
   }
+
+  .test-warning {
+    text-align: center;
+    margin-top: 40p;
+    font-size: 24px;
+    color: red;
+  }
+
+  .stripe-button {
+    margin-top: 40px;
+    margin-left: auto;
+  }
 }
 
 // .checkout-page {
