implement code that pulls in our shop data from firestore and stores it into the shop reducer from our shop page. included withSpinner HOC

--- a/React Projects/crwn-clothing/src/pages/checkout/checkout.styles.scss
+++ b/React Projects/crwn-clothing/src/pages/checkout/checkout.styles.scss
@@ -32,9 +32,10 @@
     color: red;
   }
 
-  .stripe-button {
+  .pay-button {
     margin-top: 40px;
-    margin-left: auto;
+    // margin-left: auto;
+    align-self: center;
   }
 }
 
