--- a/React Projects/crwn-clothing/src/components/collection-preview/collection-preview.styles.scss
+++ b/React Projects/crwn-clothing/src/components/collection-preview/collection-preview.styles.scss
@@ -1,22 +1,6 @@
-// .collection-preview {
-//   display: flex;
-//   flex-direction: column;
-//   margin-bottom: 30px;
-
-//   .title {
-//     font-size: 28px;
-//     margin-bottom: 25px;
-//   }
-
-//   .preview {
-//     display: flex;
-//     justify-content: space-between;
-//   }
-// }
-
 .collection-preview {
-  max-width: 1300px;
-  margin: auto;
+  // max-width: 1300px;
+  // margin: auto;
 
   .title {
     font-size: 28px;
